Fix spacings

--- a/default.css
+++ b/default.css
@@ -37,7 +37,7 @@ html, body
 #header img.showtime
 {
   display: block;
-  margin: 30px auto;
+  margin: 2em auto;
 }
 #header h1, #header h2
 {
@@ -60,8 +60,8 @@ html, body
   -webkit-box-shadow: 0px -10px 30px 0px #000;
   -moz-box-shadow: 0px -10px 30px 0px #000;
   box-shadow: 0px -10px 30px #000;
-  margin-bottom: 20px;
 }
+#content .container {margin-top: 1.5em; margin-bottom: 1.5em}
 
 #footer, #push {height: 4em}
 #footer
